// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paragraph should render a correctly 1`] = `
.c0 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #3F3F42;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  padding-bottom: 1.5rem;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

<p
  className="c0"
>
  This is text in a paragraph.
</p>
`;

exports[`Paragraph should render correctly with arabic script typography values 1`] = `
.c0 {
  font-size: 1.125rem;
  line-height: 1.75rem;
  color: #3F3F42;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  padding-bottom: 1.5rem;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 1.375rem;
    line-height: 2rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 1.375rem;
    line-height: 2rem;
  }
}

<p
  className="c0"
>
  بعض محتوى النص
</p>
`;
